RESOLVED FIXED48461
WebKit2 API tests failing because we are waiting to dispatch the messages to the Injected Bundle until after the WebProcess did finish launching
https://bugs.webkit.org/show_bug.cgi?id=48461
Summary WebKit2 API tests failing because we are waiting to dispatch the messages to ...
Jessie Berlin
Reported 2010-10-27 13:23:03 PDT
The tests expect to be able to send messages before the WebProcess finishes launching. The fix is probably to move the dispatching of the pending messages back to ensureWebProcess but not make a message pending if the m_process is launching.
Attachments
Post the pending messages in ensureWebProcess but don't make messages pending if the process is launching (3.64 KB, patch)
2010-10-27 13:29 PDT, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2010-10-27 13:29:41 PDT
Created attachment 72076 [details] Post the pending messages in ensureWebProcess but don't make messages pending if the process is launching
Jessie Berlin
Comment 2 2010-10-27 13:40:01 PDT
Comment on attachment 72076 [details] Post the pending messages in ensureWebProcess but don't make messages pending if the process is launching Committed in r70702 http://trac.webkit.org/changeset/70702
Note You need to log in before you can comment on or make changes to this bug.