Fix the WebKit2 API tests. https://bugs.webkit.org/show_bug.cgi?id=48461

Reviewed by Sam Weinig.

The API tests were failing because the tests expect to be able to send messages before the
WebProcess finishes launching.

Instead of dispatching the pending messages in processDidFinishLaunching, dispatch them in
ensureWebProcess but do not make messages pending if the process is launching.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::processDidFinishLaunching):
Move dispatching the pending messages back from here ...
(WebKit::WebContext::ensureWebProcess):
... to here.
(WebKit::WebContext::postMessageToInjectedBundle):
Check whether the process can send messages in order to determine if a message needs to be
sent later.

* UIProcess/WebProcessProxy.h:
(WebKit::WebProcessProxy::canSendMessage):
The WebProcessProxy can send a message if it is valid or if it is launching.



Canonical link: https://commits.webkit.org/61221@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70702 268f45cc-cd09-0410-ab3c-d52691b4dbfc