WebKit2/UIProcess/WebProcessProxy.h
@@ -90,6 +90,7 @@ public:
 
     bool isValid() const { return m_connection; }
     bool isLaunching() const;
+    bool canSendMessage() const { return isValid() || isLaunching(); }
 
     WebFrameProxy* webFrame(uint64_t) const;
     void frameCreated(uint64_t, WebFrameProxy*);
